fix: Poprawiono sposób dodawania obiektów obsługi tras do routerów
Poprawiono sposób dodawania obiektów obsługi tras do routerów, przygotowując go pod implementację parametrów tras.